; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/formats/libchdr/extr_libchdr_bitstream.c_bitstream_read.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/formats/libchdr/extr_libchdr_bitstream.c_bitstream_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bitstream = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bitstream_read(%struct.bitstream* %0, i32 %1) #0 {
  %3 = alloca %struct.bitstream*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.bitstream* %0, %struct.bitstream** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.bitstream*, %struct.bitstream** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @bitstream_peek(%struct.bitstream* %6, i32 %7)
  store i32 %8, i32* %5, align 4
  %9 = load %struct.bitstream*, %struct.bitstream** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @bitstream_remove(%struct.bitstream* %9, i32 %10)
  %12 = load i32, i32* %5, align 4
  ret i32 %12
}

declare dso_local i32 @bitstream_peek(%struct.bitstream*, i32) #1

declare dso_local i32 @bitstream_remove(%struct.bitstream*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
